test-data-factory/main/default/objects/Default_Object_Setting__mdt/Default_Object_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Defines the default object structure for data generated for testing purposes for different objects on the platform</description>
    <label>Default Object Setting</label>
    <pluralLabel>Default Object Setting</pluralLabel>
</CustomObject>