test-data-factory/main/default/objects/Default_Object_Setting__mdt/fields/Object_Definition__c.field-meta.xml
<CustomField>
    <fullName>Object_Definition__c</fullName>
    <description>JSON object definition of SObject</description>
    <label>Object Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>