test-data-factory/main/default/objects/Default_Object_Setting__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>The object for which the default should be defined</description>
    <label>Object Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Default_Object_Setting</relationshipLabel>
    <relationshipName>Default_Object_Setting</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>