test-data-factory/main/default/objects/Default_Object_Setting__mdt/fields/Override_Code_Definition__c.field-meta.xml
<CustomField>
    <fullName>Override_Code_Definition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this setting override the definition set in the code.  Usually settings define in code take precedence as code definitions have more flexibility for setting dynamic fields such as dates.  This allows overriding code setting if needed.</description>
    <label>Override Code Definition</label>
    <type>Checkbox</type>
</CustomField>